--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <title>sptrisiko.com</title>
 </head>
 <body>
   <h1>sptrisiko.com</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ad pariatur odit, ea nobis reiciendis aut et asperiores nostrum, doloribus doloremque consectetur quisquam, deleniti ipsam magni aperiam fuga odio. Suscipit.</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam sapiente aliquid quis, adipisci dignissimos quia dicta? Quos accusamus, blanditiis distinctio repellendus architecto eum, ipsam nostrum dolore consequuntur, incidunt fuga aspernatur.</p>
+  <script src="/js/script.js" charset="utf-8"></script>
 </body>
 </html>
