--- a/index.html
+++ b/index.html
@@ -11,9 +11,23 @@
   <title>sptrisiko.com</title>
 </head>
 <body>
+  <header>
+    <ul class="nav-desktop nav-bar">
+      <li><a href="/index.html"><i class="fas fa-home"></i></a></li>
+      <li><a href="/html/player.html">Giocatori</a></li>
+      <li><a href="/html/year.html">Anno</a></li>
+      <li><a href="/html/rules.html">Regole</a></li>
+      <li><i class="fas fa-bars hamburger"></i></li>
+    </ul>
+    <ul class="nav-mobile nav-bar">
+      <li><a href="/index.html"><i class="fas fa-home"></i></a></li>
+      <li><a href="/html/player.html">Giocatori</a></li>
+      <li><a href="/html/year.html">Anno</a></li>
+      <li><a href="/html/rules.html">Regole</a></li>
+    </ul>
+  </header>
   <h1>sptrisiko.com</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ad pariatur odit, ea nobis reiciendis aut et asperiores nostrum, doloribus doloremque consectetur quisquam, deleniti ipsam magni aperiam fuga odio. Suscipit.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam sapiente aliquid quis, adipisci dignissimos quia dicta? Quos accusamus, blanditiis distinctio repellendus architecto eum, ipsam nostrum dolore consequuntur, incidunt fuga aspernatur.</p>
   <script src="/js/script.js" charset="utf-8"></script>
 </body>
 </html>
