Working on nav-bar

--- a/index.html
+++ b/index.html
@@ -12,22 +12,29 @@
 </head>
 <body>
   <header>
-    <ul class="nav-desktop nav-bar">
-      <li><a href="/index.html"><i class="fas fa-home"></i></a></li>
-      <li><a href="/html/player.html">Giocatori</a></li>
-      <li><a href="/html/year.html">Anno</a></li>
-      <li><a href="/html/rules.html">Regole</a></li>
-      <li><i class="fas fa-bars hamburger"></i></li>
-    </ul>
-    <ul class="nav-mobile nav-bar">
-      <li><a href="/index.html"><i class="fas fa-home"></i></a></li>
-      <li><a href="/html/player.html">Giocatori</a></li>
-      <li><a href="/html/year.html">Anno</a></li>
-      <li><a href="/html/rules.html">Regole</a></li>
-    </ul>
+    <div class="container">
+      <ul class="nav-desktop nav-bar">
+        <li><a href="/index.html"><i class="fas fa-home"></i></a></li>
+        <li><a href="/html/player.html">Giocatori</a></li>
+        <li><a href="/html/year.html">Anno</a></li>
+        <li><a href="/html/rules.html">Regole</a></li>
+        <li><i class="fas fa-bars hamburger"></i></li>
+      </ul>
+      <ul class="nav-mobile nav-bar display-none">
+        <li><a href="/index.html"><i class="fas fa-home"></i></a></li>
+        <li><a href="/html/player.html">Giocatori</a></li>
+        <li><a href="/html/year.html">Anno</a></li>
+        <li><a href="/html/rules.html">Regole</a></li>
+        <li><i class="fas fa-bars hamburger"></i></li>
+      </ul>
+    </div>
   </header>
-  <h1>sptrisiko.com</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ad pariatur odit, ea nobis reiciendis aut et asperiores nostrum, doloribus doloremque consectetur quisquam, deleniti ipsam magni aperiam fuga odio. Suscipit.</p>
+  <main>
+    <div class="container">
+      <h2>hello world</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ad pariatur odit, ea nobis reiciendis aut et asperiores nostrum, doloribus doloremque consectetur quisquam, deleniti ipsam magni aperiam fuga odio. Suscipit.</p>
+    </div>
+  </main>
   <script src="/js/script.js" charset="utf-8"></script>
 </body>
 </html>
