--- a/index.html
+++ b/index.html
@@ -27,12 +27,33 @@
         <li><a href="/html/rules.html">Regole</a></li>
         <li><i class="fas fa-bars hamburger"></i></li>
       </ul>
+      <h1 class="main-title"><span class="s">s</span><span class="p">p</span><span class="t">t</span><span class="r">r</span>isiko</h1>
     </div>
   </header>
   <main>
     <div class="container">
-      <h2>hello world</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ad pariatur odit, ea nobis reiciendis aut et asperiores nostrum, doloribus doloremque consectetur quisquam, deleniti ipsam magni aperiam fuga odio. Suscipit.</p>
+      <div class="five-ws">
+        <div class="who ws">
+          <h2>Chi?</h2>
+          <p>Quattro generali pronti a tutto per ristabilire l'ordine.</p>
+        </div>
+        <div class="what ws">
+          <h2>Cosa?</h2>
+          <p>Chi riuscira' a porre fine a questa buia era fatta di tradimenti e cospirazioni?</p>
+        </div>
+        <div class="when ws">
+          <h2>Quando?</h2>
+          <p>236 d.C.</p>
+        </div>
+        <div class="where ws">
+          <h2>Dove?</h2>
+          <p>Roma</p>
+        </div>
+        <div class="why ws">
+          <h2>Perche'?</h2>
+          <p>Solo il prescelto e' degno di salire alla guida dell'impero. Dimostra il tuo valore.</p>
+        </div>
+      </div>
     </div>
   </main>
   <script src="/js/script.js" charset="utf-8"></script>
