--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
   <link rel="stylesheet" href="/css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <title>sptrisiko.com</title>
@@ -14,18 +14,18 @@
   <header>
     <div class="container">
       <ul class="nav-desktop nav-bar">
-        <li><a href="/index.html"><i class="fas fa-home"></i></a></li>
+        <li><a href="/index.html"><i class="las la-home home"></i></a></li>
         <li><a href="/html/player.html">Giocatori</a></li>
         <li><a href="/html/year.html">Anno</a></li>
         <li><a href="/html/rules.html">Regole</a></li>
-        <li><i class="fas fa-bars hamburger"></i></li>
+        <li><i class="las la-bars hamburger"></i></li>
       </ul>
       <ul class="nav-mobile nav-bar display-none">
-        <li><a href="/index.html"><i class="fas fa-home"></i></a></li>
+        <li><a href="/index.html"><i class="las la-home home"></i></a></li>
         <li><a href="/html/player.html">Giocatori</a></li>
         <li><a href="/html/year.html">Anno</a></li>
         <li><a href="/html/rules.html">Regole</a></li>
-        <li><i class="fas fa-bars hamburger"></i></li>
+        <li><i class="las la-bars hamburger"></i></li>
       </ul>
       <h1 class="main-title"><span class="s">s</span><span class="p">p</span><span class="t">t</span><span class="r">r</span>isiko</h1>
     </div>
@@ -43,11 +43,11 @@
         </div>
         <div class="when ws">
           <h2>Quando?</h2>
-          <p>236 d.C.</p>
+          <p>Corre l'anno 236 d.C. Sono tempi bui e disperati.</p>
         </div>
         <div class="where ws">
           <h2>Dove?</h2>
-          <p>Roma</p>
+          <p>Il possente impero Romano, ora non e' che l'ombra di se stesso. Roma, e' nel caos. Il popolo e' perso.</p>
         </div>
         <div class="why ws">
           <h2>Perche'?</h2>
