Fixed nav-mobile overflow problem

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <li><a href="/html/player.html">Giocatori</a></li>
         <li><a href="/html/year.html">Anno</a></li>
         <li><a href="/html/rules.html">Regole</a></li>
-        <li><i class="las la-bars hamburger"></i></li>
+        <li><a href="#"><i class="las la-bars hamburger"></i></a></li>
       </ul>
       <ul class="nav-mobile nav-bar display-none">
         <li><a href="/index.html"><i class="las la-home home"></i></a></li>
         <li><a href="/html/player.html">Giocatori</a></li>
         <li><a href="/html/year.html">Anno</a></li>
         <li><a href="/html/rules.html">Regole</a></li>
-        <li><i class="las la-bars hamburger"></i></li>
+        <li><a href="#"><i class="las la-bars hamburger"></i></a></li>
       </ul>
       <h1 class="main-title"><span class="s">s</span><span class="p">p</span><span class="t">t</span><span class="r">r</span>isiko</h1>
     </div>
