Added some imgs

--- a/index.html
+++ b/index.html
@@ -35,22 +35,37 @@
       <div class="five-ws">
         <div class="who ws">
           <h2>Chi?</h2>
+          <div class="wrapper">
+            <img src="https://img.icons8.com/ios/100/000000/roman-soldier.png">
+          </div>
           <p>Quattro generali pronti a tutto per ristabilire l'ordine.</p>
         </div>
         <div class="what ws">
           <h2>Cosa?</h2>
+          <div class="wrapper">
+            <img src="https://img.icons8.com/metro/52/000000/infantry-knife.png">
+          </div>
           <p>Chi riuscira' a porre fine a questa buia era fatta di tradimenti e cospirazioni?</p>
         </div>
         <div class="when ws">
           <h2>Quando?</h2>
+          <div class="wrapper">
+            <img src="https://img.icons8.com/ios-filled/100/000000/hourglass.png">
+          </div>
           <p>Corre l'anno 236 d.C. Sono tempi bui e disperati.</p>
         </div>
         <div class="where ws">
           <h2>Dove?</h2>
+          <div class="wrapper">
+            <img src="https://img.icons8.com/ios/100/000000/coliseum.png">
+          </div>
           <p>Il possente impero Romano, ora non e' che l'ombra di se stesso. Roma, e' nel caos. Il popolo e' perso.</p>
         </div>
         <div class="why ws">
           <h2>Perche'?</h2>
+          <div class="wrapper">
+            <img src="https://img.icons8.com/color/64/000000/fairytale.png">
+          </div>
           <p>Solo il prescelto e' degno di salire alla guida dell'impero. Dimostra il tuo valore.</p>
         </div>
       </div>
