Added main structure for other HTML pages

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
       </div>
     </div>
   </main>
+  <footer>
+    <div class="container">
+      <div class="copyright">
+        <a href="https://www.ailequal.com/" target="_blank">www.ailequal.com</a>
+      </div>
+    </div>
+  </footer>
   <script src="/js/script.js" charset="utf-8"></script>
 </body>
 </html>
