--- a/html/general-faction.html
+++ b/html/general-faction.html
@@ -8,26 +8,26 @@
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
   <link rel="stylesheet" href="/css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <title>rules.html</title>
+  <title>Generali e fazioni - S.P.T.R.isiko</title>
 </head>
 <body>
   <header>
     <div class="container">
       <ul class="nav-desktop nav-bar">
         <li class="home"><a href="/index.html"><i class="las la-home"></i></a></li>
-        <li><a href="/html/player.html">Giocatori</a></li>
-        <li><a href="/html/year.html">Anno</a></li>
-        <li><a href="/html/rules.html">Regole</a></li>
+        <li><a class="selection" href="/html/general-faction.html">Generali e fazioni</a></li>
+        <li><a href="/html/past-conflicts.html">Conflitti passati</a></li>
+        <li><a href="/html/code-of-honor.html">Etica militare</a></li>
         <li class="hamburger"><a href="#"><i class="las la-bars"></i></a></li>
       </ul>
       <ul class="nav-mobile nav-bar display-none">
         <li class="home"><a href="/index.html"><i class="las la-home"></i></a></li>
-        <li><a href="/html/player.html">Giocatori</a></li>
-        <li><a href="/html/year.html">Anno</a></li>
-        <li><a href="/html/rules.html">Regole</a></li>
+        <li><a class="selection" href="/html/general-faction.html">Generali e fazioni</a></li>
+        <li><a href="/html/past-conflicts.html">Conflitti passati</a></li>
+        <li><a href="/html/code-of-honor.html">Etica militare</a></li>
         <li class="hamburger"><a href="#"><i class="las la-bars"></i></a></li>
       </ul>
-      <h1 class="main-title"><span class="s">R</span><span class="p">e</span><span class="t">g</span><span class="r">o</span>le</h1>
+      <h1 class="main-title"><span class="s">G</span><span class="p">e</span><span class="t">n</span><span class="r">e</span>rali e <span class="s">f</span><span class="p">a</span><span class="t">z</span><span class="r">i</span>oni</h1>
     </div>
   </header>
   <main>
