--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
   <link rel="stylesheet" href="/css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <title>sptrisiko.com</title>
+  <title>S.P.T.R.isiko.com</title>
 </head>
 <body>
   <header>
     <div class="container">
       <ul class="nav-desktop nav-bar">
-        <li class="home"><a href="/index.html"><i class="las la-home"></i></a></li>
-        <li><a href="/html/player.html">Giocatori</a></li>
-        <li><a href="/html/year.html">Anno</a></li>
-        <li><a href="/html/rules.html">Regole</a></li>
+        <li class="home"><a class="selection" href="/index.html"><i class="las la-home"></i></a></li>
+        <li><a href="/html/general-faction.html">Generali e fazioni</a></li>
+        <li><a href="/html/past-conflicts.html">Conflitti passati</a></li>
+        <li><a href="/html/code-of-honor.html">Etica militare</a></li>
         <li class="hamburger"><a href="#"><i class="las la-bars"></i></a></li>
       </ul>
       <ul class="nav-mobile nav-bar display-none">
-        <li class="home"><a href="/index.html"><i class="las la-home"></i></a></li>
-        <li><a href="/html/player.html">Giocatori</a></li>
-        <li><a href="/html/year.html">Anno</a></li>
-        <li><a href="/html/rules.html">Regole</a></li>
+        <li class="home"><a class="selection" href="/index.html"><i class="las la-home"></i></a></li>
+        <li><a href="/html/general-faction.html">Generali e fazioni</a></li>
+        <li><a href="/html/past-conflicts.html">Conflitti passati</a></li>
+        <li><a href="/html/code-of-honor.html">Etica militare</a></li>
         <li class="hamburger"><a href="#"><i class="las la-bars"></i></a></li>
       </ul>
-      <h1 class="main-title"><span class="s">s</span><span class="p">p</span><span class="t">t</span><span class="r">r</span>isiko</h1>
+      <h1 class="main-title"><span class="s">S.</span><span class="p">P.</span><span class="t">T.</span><span class="r">R.</span>isiko</h1>
     </div>
   </header>
   <main>
