Identation only with tab

--- a/index.html
+++ b/index.html
@@ -1,83 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <title>S.P.T.R.isiko.com</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
+	<link rel="stylesheet"
+		href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+	<link rel="stylesheet" href="/css/style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<title>S.P.T.R.isiko.com</title>
 </head>
+
 <body>
-  <header>
-    <div class="container">
-      <ul class="nav-desktop nav-bar">
-        <li class="home"><a class="selection" href="/index.html"><i class="las la-home"></i></a></li>
-        <li><a href="/html/general-faction.html">Generali e fazioni</a></li>
-        <li><a href="/html/past-conflicts.html">Conflitti passati</a></li>
-        <li><a href="/html/code-of-honor.html">Etica militare</a></li>
-        <li class="hamburger"><a href="#"><i class="las la-bars"></i></a></li>
-      </ul>
-      <ul class="nav-mobile nav-bar display-none">
-        <li class="home"><a class="selection" href="/index.html"><i class="las la-home"></i></a></li>
-        <li><a href="/html/general-faction.html">Generali e fazioni</a></li>
-        <li><a href="/html/past-conflicts.html">Conflitti passati</a></li>
-        <li><a href="/html/code-of-honor.html">Etica militare</a></li>
-        <li class="hamburger"><a href="#"><i class="las la-bars"></i></a></li>
-      </ul>
-      <h1 class="main-title"><span class="s">S.</span><span class="p">P.</span><span class="t">T.</span><span class="r">R.</span>isiko</h1>
-    </div>
-  </header>
-  <main>
-    <div class="container">
-      <div class="five-ws">
-        <div class="who ws">
-          <h2>Chi?</h2>
-          <div class="wrapper">
-            <img src="https://img.icons8.com/ios/100/000000/roman-soldier.png">
-          </div>
-          <p>Quattro generali pronti a tutto per ristabilire l'ordine.</p>
-        </div>
-        <div class="what ws">
-          <h2>Cosa?</h2>
-          <div class="wrapper">
-            <img src="https://img.icons8.com/metro/52/000000/infantry-knife.png">
-          </div>
-          <p>Chi riuscira' a porre fine a questa buia era fatta di tradimenti e cospirazioni?</p>
-        </div>
-        <div class="when ws">
-          <h2>Quando?</h2>
-          <div class="wrapper">
-            <img src="https://img.icons8.com/ios-filled/100/000000/hourglass.png">
-          </div>
-          <p>Corre l'anno 236 d.C. Sono tempi bui e disperati.</p>
-        </div>
-        <div class="where ws">
-          <h2>Dove?</h2>
-          <div class="wrapper">
-            <img src="https://img.icons8.com/ios/100/000000/coliseum.png">
-          </div>
-          <p>Il possente impero Romano, ora non e' che l'ombra di se stesso. Roma, e' nel caos. Il popolo e' perso.</p>
-        </div>
-        <div class="why ws">
-          <h2>Perche'?</h2>
-          <div class="wrapper">
-            <img src="https://img.icons8.com/color/64/000000/fairytale.png">
-          </div>
-          <p>Solo il prescelto e' degno di salire alla guida dell'impero. Dimostra il tuo valore.</p>
-        </div>
-      </div>
-    </div>
-  </main>
-  <footer>
-    <div class="container">
-      <div class="copyright">
-        <a href="https://www.ailequal.com/" target="_blank">www.ailequal.com</a>
-      </div>
-    </div>
-  </footer>
-  <script src="/js/script.js" charset="utf-8"></script>
+	<header>
+		<div class="container">
+			<ul class="nav-desktop nav-bar">
+				<li class="home"><a class="selection" href="/index.html"><i class="las la-home"></i></a></li>
+				<li><a href="/html/general-faction.html">Generali e fazioni</a></li>
+				<li><a href="/html/past-conflicts.html">Conflitti passati</a></li>
+				<li><a href="/html/code-of-honor.html">Etica militare</a></li>
+				<li class="hamburger"><a href="#"><i class="las la-bars"></i></a></li>
+			</ul>
+			<ul class="nav-mobile nav-bar display-none">
+				<li class="home"><a class="selection" href="/index.html"><i class="las la-home"></i></a></li>
+				<li><a href="/html/general-faction.html">Generali e fazioni</a></li>
+				<li><a href="/html/past-conflicts.html">Conflitti passati</a></li>
+				<li><a href="/html/code-of-honor.html">Etica militare</a></li>
+				<li class="hamburger"><a href="#"><i class="las la-bars"></i></a></li>
+			</ul>
+			<h1 class="main-title"><span class="s">S.</span><span class="p">P.</span><span class="t">T.</span><span
+					class="r">R.</span>isiko</h1>
+		</div>
+	</header>
+	<main>
+		<div class="container">
+			<div class="five-ws">
+				<div class="who ws">
+					<h2>Chi?</h2>
+					<div class="wrapper">
+						<img src="https://img.icons8.com/ios/100/000000/roman-soldier.png">
+					</div>
+					<p>Quattro generali pronti a tutto per ristabilire l'ordine.</p>
+				</div>
+				<div class="what ws">
+					<h2>Cosa?</h2>
+					<div class="wrapper">
+						<img src="https://img.icons8.com/metro/52/000000/infantry-knife.png">
+					</div>
+					<p>Chi riuscira' a porre fine a questa buia era fatta di tradimenti e cospirazioni?</p>
+				</div>
+				<div class="when ws">
+					<h2>Quando?</h2>
+					<div class="wrapper">
+						<img src="https://img.icons8.com/ios-filled/100/000000/hourglass.png">
+					</div>
+					<p>Corre l'anno 236 d.C. Sono tempi bui e disperati.</p>
+				</div>
+				<div class="where ws">
+					<h2>Dove?</h2>
+					<div class="wrapper">
+						<img src="https://img.icons8.com/ios/100/000000/coliseum.png">
+					</div>
+					<p>Il possente impero Romano, ora non e' che l'ombra di se stesso. Roma, e' nel caos. Il popolo e' perso.</p>
+				</div>
+				<div class="why ws">
+					<h2>Perche'?</h2>
+					<div class="wrapper">
+						<img src="https://img.icons8.com/color/64/000000/fairytale.png">
+					</div>
+					<p>Solo il prescelto e' degno di salire alla guida dell'impero. Dimostra il tuo valore.</p>
+				</div>
+			</div>
+		</div>
+	</main>
+	<footer>
+		<div class="container">
+			<div class="copyright">
+				<a href="https://www.ailequal.com/" target="_blank">www.ailequal.com</a>
+			</div>
+		</div>
+	</footer>
+	<script src="/js/script.js" charset="utf-8"></script>
 </body>
+
 </html>
