--- a/html/general-faction.html
+++ b/html/general-faction.html
@@ -1,45 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <title>Generali e fazioni - S.P.T.R.isiko</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
+	<link rel="stylesheet"
+		href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+	<link rel="stylesheet" href="/css/style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<title>Generali e fazioni - S.P.T.R.isiko</title>
 </head>
+
 <body>
-  <header>
-    <div class="container">
-      <ul class="nav-desktop nav-bar">
-        <li class="home"><a href="/index.html"><i class="las la-home"></i></a></li>
-        <li><a class="selection" href="/html/general-faction.html">Generali e fazioni</a></li>
-        <li><a href="/html/past-conflicts.html">Conflitti passati</a></li>
-        <li><a href="/html/code-of-honor.html">Etica militare</a></li>
-        <li class="hamburger"><a href="#"><i class="las la-bars"></i></a></li>
-      </ul>
-      <ul class="nav-mobile nav-bar display-none">
-        <li class="home"><a href="/index.html"><i class="las la-home"></i></a></li>
-        <li><a class="selection" href="/html/general-faction.html">Generali e fazioni</a></li>
-        <li><a href="/html/past-conflicts.html">Conflitti passati</a></li>
-        <li><a href="/html/code-of-honor.html">Etica militare</a></li>
-        <li class="hamburger"><a href="#"><i class="las la-bars"></i></a></li>
-      </ul>
-      <h1 class="main-title"><span class="s">G</span><span class="p">e</span><span class="t">n</span><span class="r">e</span>rali e <span class="s">f</span><span class="p">a</span><span class="t">z</span><span class="r">i</span>oni</h1>
-    </div>
-  </header>
-  <main>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi repudiandae maxime, fugit neque! Quisquam sequi impedit aperiam iusto excepturi doloribus, placeat, culpa possimus iure dicta doloremque. Quaerat, sequi. Quos, id.</p>
-  </main>
-  <footer>
-    <div class="container">
-      <div class="copyright">
-        <a href="https://www.ailequal.com/" target="_blank">www.ailequal.com</a>
-      </div>
-    </div>
-  </footer>
-  <script src="/js/script.js" charset="utf-8"></script>
+	<header>
+		<div class="container">
+			<ul class="nav-desktop nav-bar">
+				<li class="home"><a href="/index.html"><i class="las la-home"></i></a></li>
+				<li><a class="selection" href="/html/general-faction.html">Generali e fazioni</a></li>
+				<li><a href="/html/past-conflicts.html">Conflitti passati</a></li>
+				<li><a href="/html/code-of-honor.html">Etica militare</a></li>
+				<li class="hamburger"><a href="#"><i class="las la-bars"></i></a></li>
+			</ul>
+			<ul class="nav-mobile nav-bar display-none">
+				<li class="home"><a href="/index.html"><i class="las la-home"></i></a></li>
+				<li><a class="selection" href="/html/general-faction.html">Generali e fazioni</a></li>
+				<li><a href="/html/past-conflicts.html">Conflitti passati</a></li>
+				<li><a href="/html/code-of-honor.html">Etica militare</a></li>
+				<li class="hamburger"><a href="#"><i class="las la-bars"></i></a></li>
+			</ul>
+			<h1 class="main-title"><span class="s">G</span><span class="p">e</span><span class="t">n</span><span
+					class="r">e</span>rali e <span class="s">f</span><span class="p">a</span><span class="t">z</span><span
+					class="r">i</span>oni</h1>
+		</div>
+	</header>
+	<main>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi repudiandae maxime, fugit neque! Quisquam
+			sequi impedit aperiam iusto excepturi doloribus, placeat, culpa possimus iure dicta doloremque. Quaerat, sequi.
+			Quos, id.</p>
+	</main>
+	<footer>
+		<div class="container">
+			<div class="copyright">
+				<a href="https://www.ailequal.com/" target="_blank">www.ailequal.com</a>
+			</div>
+		</div>
+	</footer>
+	<script src="/js/script.js" charset="utf-8"></script>
 </body>
+
 </html>
